--- a/style/bind.css
+++ b/style/bind.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   height: 100%;
   font-family: "Microsoft YaHei";
+  overflow: hidden;
 }
 .wrap form {
   width: 100%;
@@ -13,8 +14,8 @@ body {
 }
 .wrap form input {
   text-indent: 0.37333333rem;
-  font-size: 0.26666667rem;
-  height: 0.90666667rem;
+  font-size: 0.53333333rem;
+  height: 1.17333333rem;
   border-radius: 0.08rem;
   margin: 0.88rem;
   margin-top: 0.66666667rem;
@@ -27,11 +28,28 @@ body {
 }
 .wrap form input:last-child {
   border: none;
-  height: 0.88rem;
-  font-size: 0.36rem;
+  height: 1.14666667rem;
+  font-size: 0.53333333rem;
   color: #fff;
   background: #70c183;
 }
 .wrap img {
   width: 10rem;
+}
+.wrap .mask {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(255, 255, 255, 0.5);
+}
+.wrap .mask div {
+  padding: 60px 30px;
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
+  width: 60%;
+  margin: 240px auto;
+  text-align: center;
+  line-height: 100%;
 }
